<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Assignment 3</string>
    <string name="default_port">8000</string>

    <!-- MAIN -->
    <string name="title_activity_main">Assignment 3</string>
    <string name="button_server">Server</string>
    <string name="button_client">Client</string>

    <!-- CLIENT -->
    <string name="title_activity_client">Client</string>
    <string name="edit_user_name">Username</string>
    <string name="edit_ip_address">IP Address</string>
    <string name="edit_port">Port</string>
    <string name="button_begin">Start</string>
    <string name="button_stop">Stop</string>
    <string name="btn_client_location_provider">Location Provider</string>
    <string name="client_providers">Provider</string>

    <!-- SERVER -->
    <string name="title_activity_server">Server</string>
    <string name="Text_To_Speech">Text To Speech</string>

</resources>
