<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_client"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="comp4985.matjordan.assign3.ClientActivity"
    tools:ignore="MergeRootFrame">

    <EditText android:id="@+id/client_user_name"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_user_name" />

    <EditText android:id="@+id/client_ip_address"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/edit_ip_address" />

    <EditText android:id="@+id/client_port"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/default_port"
        android:hint="@string/edit_port" />

    <Spinner
        android:id="@+id/client_providers"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/client_providers"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center">

        <Button
            android:id="@+id/btn_client_begin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_begin"
            android:onClick="btn_client_begin_click"/>

        <Button
            android:id="@+id/btn_client_stop"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_stop"
            android:onClick="btn_client_stop_click"/>

        <Button
            android:id="@+id/btn_set_location_provider"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_client_location_provider"
            android:onClick="btn_client_location_provider_click"/>

    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Take a Photo"
        android:id="@+id/btnCapturePicture"
        android:layout_gravity="center_horizontal"
        android:onClick="btnCapturePicture"
        />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView" />

</LinearLayout>
